# soma-spatialdata-compat

./: .env  README.md  config.json  pyproject.toml
notebooks/: spatialdata-reference.ipynb  tiledbsoma-spatialdata-compatibility.ipynb
src/uv_soma_test/: __init__.py  config.py  constants.py  workflows.py
tests/: test_workflows.py
